# queryGPT

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docker/: qdrant-docker-compose.yml  weaviate-docker-compose.yml
scripts/: get-embeddings  load-vector-db  load-weaviate  query  start-vector-db  start-weaviate  stop-vector-db  stop-weaviate
src/queryGPT/: data.py  embeddings.py
src/query_gpt/: completion.py  config.py  data.py  embeddings.py  irs_data.py  load_vector_db.py  load_weaviate.py  qdrant.py  query.py  retry.py  weaviate.py
src/query_gpt/databases/: qdrant.py  weaviate.py
