[tool.poetry]
name = "query_gpt"
version = "0.1.0"
description = "Reference for how to query a database using natural language (OpenAI)"
authors = ["Mark Wicks <mawicks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
weaviate-client = "^3.21.0"
openai = "^0.27.8"
requests = "^2.31.0"
types-requests = "^2.31.0.1"
pandas = "^2.0.2"
tqdm = "^4.65.0"
pyarrow = "^12.0.1"
pyzipper = "^0.3.6"
awscli = "^1.27.160"
mypy = "^1.4.0"
qdrant-client = "^1.3.0"
tiktoken = "^0.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.2"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
